fixed arrow with animation on mobile view

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -155,20 +155,6 @@
   padding: 100px;
 }
 
-.downArrow {
-  position: absolute;
-  animation: MoveUpDown 1.3s linear infinite;
-}
-
-@keyframes MoveUpDown {
-  0%, 100% {
-    bottom: 0;
-  }
-  50% {
-    bottom: 3.5px;
-  }
-}
-
 .author {
   color:#33eea3;
 }
